--- a/plants/index.html
+++ b/plants/index.html
@@ -109,43 +109,47 @@
         <section class="prices" id="prices">
             <div class="prices_wrapper">
                 <div class="prices_text">
-                    <div class="prace-item">
-                        <div class="prace-block">
-                            <h2 class="prace-text">Prices</h2>
-                            <div class="prace-link">
-                                <div class="prace-basic">
-                                    <p class="prace_link_text">Basics</p>
-                                    <div class="accord_btn">
-                                        <button class="accord">
-                                            <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
-                                        </button>
+                    <div class="price-item">
+                        <div class="price-block">
+                            <h2 class="price-text">Prices</h2>
+                            <div class="price-link">
+                                <div class="Price-link">
+                                    <div class="price-basic">
+                                        <p class="price_link_text">Basics</p>
+                                        <div class="accord_btn">
+                                            <button class="accord">
+                                                <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
+                                            </button>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="prace-basic">
-                                    <p class="prace_link_text">Standard</p>
-                                    <div class="accord_btn">
-                                        <button class="accord">
-                                            <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
-                                        </button>
+                                    <div class="price-basic">
+                                        <p class="price_link_text">Standard</p>
+                                        <div class="accord_btn">
+                                            <button class="accord">
+                                                <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
+                                            </button>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="prace-basic">
-                                    <p class="prace_link_text">Pro care</p>
-                                    <div class="accord_btn">
-                                        <button class="accord">
-                                            <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
-                                        </button>
+                                    <div class="price-basic">
+                                        <p class="price_link_text">Pro care</p>
+                                        <div class="accord_btn">
+                                            <button class="accord">
+                                                <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="text_call_us">
-                        <h2 class="our_best">Our best gardeners are ready to help you</h2>
-                        <button class="button2">Contact us</button>
-                    </div>
-                    <div class="contact">
-                        <img src="assets/img/contact.svg" alt="contact">
+                    <div class="call_us_block">
+                        <div class="text_call_us">
+                            <h2 class="our_best">Our best <span class="green">gardeners</span> are ready to help you</h2>
+                            <button class="button2">Contact us</button>
+                        </div>
+                        <div class="contact">
+                            <img src="assets/img/contact.svg" alt="contact">
+                        </div>
                     </div>
                 </div>
             </div>
