fix: correct errors and style buttons

--- a/plants/index.html
+++ b/plants/index.html
@@ -21,7 +21,7 @@
             </div>
             <nav class="navigation">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#welcome" class="nav-link1">Home</a></li>
+                    <li class="nav-item"><a href="#welcome" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
                     <li class="nav-item"><a href="#service" class="nav-link">Service</a></li>
                     <li class="nav-item"><a href="#prices" class="nav-link">Price</a></li>
@@ -172,35 +172,35 @@
                 </div>
             </div>
         </section>
-        <footer>
-            <div class="content">
-                <div class="footer-data">
-                    <p>©</p>
-                    <p>2022</p>
-                    <a href="https://github.com/andrey28121989" class="github-link">github</a>
-                </div>
-                <a href="https://rs.school/js-stage0/" class="rsschool" >Rolling Scopes School</a>
-                <ul class="social-list">
-                    <li>
-                        <a href="https://www.instagram.com/andrey_nenashev28/" class="inst_1">
-                        <img class="inst" src="assets/icons/inst.svg" alt="inst">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/andrey.nenashev.5" class="fb_1">
-                        <img class="fb" src="assets/icons/fb.svg" alt="fb">
-                        </a>
-                    </li>
-                    <li class="tw_1">
-                        <img class="tw" src="assets/icons/tw.svg" alt="tw">
-                    </li>
-                    <li class="pinterest_1">
-                        <img class="pint" src="assets/icons/pint.svg" alt="pinterest">
-                    </li>
-                </ul>
-            </div>
-        </footer>
     </main>
+    <footer>
+        <div class="content">
+            <div class="footer-data">
+                <p>©</p>
+                <p>2022</p>
+                <a href="https://github.com/andrey28121989" class="github-link">github</a>
+            </div>
+            <a href="https://rs.school/js-stage0/" class="rsschool" >Rolling Scopes School</a>
+            <ul class="social-list">
+                <li>
+                    <a href="https://www.instagram.com/andrey_nenashev28/" class="inst_1">
+                    <img class="inst" src="assets/icons/inst.svg" alt="inst">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/andrey.nenashev.5" class="fb_1">
+                    <img class="fb" src="assets/icons/fb.svg" alt="fb">
+                    </a>
+                </li>
+                <li class="tw_1">
+                    <img class="tw" src="assets/icons/tw.svg" alt="tw">
+                </li>
+                <li class="pinterest_1">
+                    <img class="pint" src="assets/icons/pint.svg" alt="pinterest">
+                </li>
+            </ul>
+        </div>
+    </footer>
   </div>
 </body>
 </html>
