--- a/plants/index.html
+++ b/plants/index.html
@@ -52,18 +52,16 @@
                     experienced </span>gardeners</h2>
                 <p class="about2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             </div>
-            <div class="houseplant">
-                <img src="assets/img/houseplant1.jpg" alt="houseplant">
-            </div>
+            <img class="image" src="assets/img/houseplant1.jpg" alt="houseplant">
         </section>
         <section class="service" id="service">
             <div class="service_content">
                 <h2 class="service_and">Service and our <br>
                     projects</h2>
                 <div class="services_buttons">
-                    <button class="button">Planting</button>
-                    <button class="button">Lawn</button>
                     <button class="button">Gardens</button>
+                    <button class="button">Lawn</button>
+                    <button class="button">Planting</button>
                 </div>
             </div>
             <div class="services">
@@ -156,22 +154,18 @@
             </div>
         </section>
         <section class="contacts" id="contacts">
-            <div class="contacts_block">
-                <div class="contacts_container">
-                    <div class="contact_img">
-                        <img src="assets/img/contact_woman1.svg" alt="woman">
-                    </div>
-                    <h2 class="contact_us">Contact us</h2>
-                    <div class="contacts_city">
-                        <p class="city_text">City</p>
-                        <div class="accord_btn1">
-                            <button class="accord1">
-                                <img src="assets/img/arrow.png" class="accordion_btn1" alt="accordion1">
-                            </button>
-                        </div>
+            <div class="contacts_content">
+                <h2 class="contact_us">Contact us</h2>
+                <div class="contacts_city">
+                    <p class="city_text">City</p>
+                    <div class="accord_btn1">
+                        <button class="accord1">
+                            <img src="assets/img/arrow.png" class="accordion_btn1" alt="accordion1">
+                        </button>
                     </div>
                 </div>
-            </div> 
+            </div>
+            <img class="woman_img" src="assets/img/contact_woman1.svg" alt="woman">
         </section>
     </main>
     <footer>
