feat: adaptiv mobile footer

--- a/plants/index.html
+++ b/plants/index.html
@@ -170,7 +170,7 @@
     </main>
     <footer>
         <div class="content">
-            <div class="footer-data">
+            <div class="footer__data">
                 <p>©</p>
                 <p>2022</p>
                 <a href="https://github.com/andrey28121989" class="github-link">github</a>
