feat: price basic active

--- a/plants/index.html
+++ b/plants/index.html
@@ -123,6 +123,17 @@
                                         </button>
                                     </div>
                                 </div>
+                                <div class="price-basic__active">
+                                    <div class="price-basic__header">
+                                        <p class="text__header">Basics</p>
+                                        <img src="assets/img/accordion_btn2.png" class="close" alt="accordion_btn2">
+                                    </div>
+                                    <div class="basic__line">  
+                                    </div>
+                                    <p class="basic__text">Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
+                                    <p class="prices__block"><span class="dollars">$<span class="price__big">15</span></span> / per hour</p>
+                                    <a href="#contacts" class="button__order">Order</a>
+                                </div>
                                 <div class="price-basic">
                                     <p class="price_link_text">Standard</p>
                                     <div class="accord_btn">
@@ -131,6 +142,17 @@
                                         </button>
                                     </div>
                                 </div>
+                                <div class="price-basic__active">
+                                    <div class="price-basic__header">
+                                        <p class="text__header">Standart</p>
+                                        <img src="assets/img/accordion_btn2.png" class="close" alt="accordion_btn2">
+                                    </div>
+                                    <div class="basic__line">  
+                                    </div>
+                                    <p class="basic__text">Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
+                                    <p class="prices__block"><span class="dollars">$<span class="price__big">25</span></span> / per hour</p>
+                                    <a href="#contacts" class="button__order">Order</a>
+                                </div>
                                 <div class="price-basic">
                                     <p class="price_link_text">Pro care</p>
                                     <div class="accord_btn">
@@ -138,6 +160,17 @@
                                             <img src="assets/img/accordion_btn.png" class="accordion_btn" alt="accordion">
                                         </button>
                                     </div>
+                                </div>
+                                <div class="price-basic__active">
+                                    <div class="price-basic__header">
+                                        <p class="text__header">Pro care</p>
+                                        <img src="assets/img/accordion_btn2.png" class="close" alt="accordion_btn2">
+                                    </div>
+                                    <div class="basic__line">  
+                                    </div>
+                                    <p class="basic__text">Release of Letraset sheets containing Lorem Ipsum passages, and more recently</p>
+                                    <p class="prices__block"><span class="dollars">$<span class="price__big">35</span></span> / per hour</p>
+                                    <a href="#contacts" class="button__order">Order</a>
                                 </div>
                         </div>
                     </div>
