--- a/plants/index.html
+++ b/plants/index.html
@@ -197,6 +197,37 @@
                         </button>
                     </div>
                 </div>
+                <div class="contacts_city__active">
+                    <p class="city_text">City</p>
+                    <div class="accord_btn1">
+                        <button class="accord1">
+                            <img src="assets/img/drop_btn.png" class="accordion_btn1" alt="accordion1">
+                        </button>
+                    </div>
+                </div>
+                <div class="contacts_city__block">
+                    <ul class="contacts_city__list">
+                        <li class="contacts_city__cities">Canandaigua, NY</li>
+                        <li class="contacts_city__cities">New York City</li>
+                        <li class="contacts_city__cities">Yonkers, NY</li>
+                        <li class="contacts_city__cities">Sherrill, NY</li>
+                    </ul>
+                </div>
+                <div class="contacts_city__phone">
+                    <div class="contacts_city__phone__text">
+                        <p class="left">City:</p>
+                        <p class="right">Canandaigua, NY</p>
+                    </div>
+                    <div class="contacts_city__phone__text">
+                        <p class="left">Phone:</p>
+                        <p class="right">+1	585	393 0001</p>
+                    </div>
+                    <div class="contacts_city__phone__text">
+                        <p class="left">Office adress:</p>
+                        <p class="right">151 Charlotte Street</p>
+                    </div>
+                    <a class="call__us" href="tel:+1 585 393 0001">Call us</a>
+                </div>
             </div>
             <img class="woman_img" src="assets/img/contact_woman1.svg" alt="woman">
         </section>
