--- a/momentum/index.html
+++ b/momentum/index.html
@@ -49,6 +49,6 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/main.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
